eeepc-acpi-scripts (1.1.1) unstable; urgency=low

  * Add support for Fn-F7 (on 10xx models). Default is screen blanking.
  * Rearrange hotkey handling a bit (no functional changes), fix comments
    and document keys for which we don't yet have event codes.
  * Configuration settings FnF6, FnF7, FnF8 and FnF9 are renamed to reflect
    function rather than location.
    (We've had one instance of renaming to reflect location on a 1000-series
    without corresponding fixes in the hotkey handler script.)
  * Alter the audio control blacklisting to allow for controls for which
    (for example) muting only should be allowed.
  * Add "Beep" to the audio control blacklist, but only for volume control.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Sat, 25 Apr 2009 16:47:17 +0100

eeepc-acpi-scripts (1.1.0) unstable; urgency=low

  [ Darren Salt ]
  * Detect who's running an X session by looking for a controlling process
    with DISPLAY set in its environment.
    This has a useful side effect: status changes can be displayed even when
    the controlling process is a login manager.
  * Try to use rfkill when toggling wireless & bluetooth.
  * Ignore events when shutting down or rebooting.
  * Give immediate indication of pressing of Fn-F2.
  * The same ACPI key codes may be used for wireless on as well as off.
  * Allow reporting via OSD of brightness changes. (Closes: #501577)
  * Tweaked notifications a bit:
    - Replaced the heuristic for determining which should be fast
      notifications with an extra parameter.
    - Fast notifications stay around for a bit longer.
  * Made the volume stepping configurable, and set the default to 3.125%
    (which is 2dB for LineOut on at least ALC269 and ALC662).
  * Blacklist some ALSA volume controls; we want to alter only one of them.
    (Tested on ALC269 (901) and ALC662 (701).)
  * Cache audio control names etc. to avoid need to detect them every time
    the volume level is changed.